got rid of GSAP parallax on hero, made hero a css bg

--- a/src/style.css
+++ b/src/style.css
@@ -3,7 +3,13 @@
 @tailwind utilities;
 
 /* TODO fix the Unknown at rule @tailwindcss(unknownAtRules) */
+/* Using all caps for custom CSS to distinguish from tailwind */
 
 html {
   scroll-behavior: smooth;
+}
+
+.HERO {
+  background-image: url("./img/main-background.jpg");
+  background-size: cover;
 }
